--- a/json/settings.json
+++ b/json/settings.json
@@ -6,5 +6,10 @@
     "desired_dlc": ["none"],
     "allow_double_occ": 0,
     "choices": 1,
-    "debug_level": 0
+    "debug_level": 0,
+    "force_faction_occ": [],
+    "force_faction_inv": [],
+    "force_faction_reb": [],
+    "force_faction_riv": [],
+    "force_faction_civ": []
 }
