--- a/json/settings.json
+++ b/json/settings.json
@@ -1,11 +1,11 @@
 {
     "modsets": "random_multiple",
-    "desired_climate": ["temperate"],
+    "desired_climate": "tropical",
     "desired_era": "modern",
-    "desired_key": "rhs",
+    "desired_key": "vanilla",
     "desired_dlc": ["none"],
     "allow_double_occ": 0,
-    "choices": 1,
+    "choices": 10,
     "debug_level": 0,
     "force_faction_occ": [],
     "force_faction_inv": [],
