--- a/json/settings.json
+++ b/json/settings.json
@@ -1,12 +1,12 @@
 {
     "modsets": "random_multiple",
-    "desired_climate": ["temperate"],
+    "desired_climate": "all_climates",
     "desired_era": "modern",
-    "desired_key": "rhs",
+    "desired_key": "vanilla",
     "desired_dlc": ["none"],
     "allow_double_occ": 0,
-    "choices": 1,
-    "debug_level": 1,
+    "choices": 3,
+    "debug_level": 0,
     "force_faction_occ": [],
     "force_faction_inv": [],
     "force_faction_reb": [],
